--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "repository": "https://github.com/jest-community/awesome-jest.git",
   "scripts": {
-    "lint": "prettier . --write"
+    "lint": "prettier ."
   },
   "devDependencies": {
     "prettier": "^2.6.2"
